--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,16 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^4.5.2",
     "bootstrap-icons": "^1.3.0",
     "font-awesome": "^4.7.0",
     "joi-browser": "^13.4.0",
+    "jquery": "^3.7.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.2",
     "moment-timezone": "^0.5.33",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "query-string": "^6.14.0",
     "react": "^17.0.1",
