--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 jwtPrivateKey="PRIVATE_KEY"
-mongoDBURL="enter your own mongodb url"
+mongoDBURL="mongodb+srv://abivihan:<db_password>@cluster0.ds9nb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 PORT=5000
+DATABASE_PASSWORD=Abhinav%401234561
